[package]
name = "download_sdl2"
version = "0.0.2"
authors = ["William Roe <git@wjlr.org.uk>"]
description = "A build helper for downloading SDL2 libraries"
license = "MIT"

[dependencies]
hyper = "0.11.2"
zip = "0.2.5"
glob = "0.2.11"
tar = "0.4.13"
flate2 = "0.2.19"
tokio-core = "0.1"
futures = "0.1"

[lib]
doctest = false
